# learn-cmake

./: README.md
step1/: CMakeLists.txt  tutorial.cxx
step2/: CMakeLists.txt  tutorial.cxx
step2/MathFunctions/: CMakeLists.txt
step3/: CMakeLists.txt
step3/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  mysqrt.cxx
